[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
description = "Manage your environment configuration with TOML"
documentation = "https://docs.rs/tomlenv"
edition = "2018"
homepage = "https://github.com/rustyhorde/tomlenv"
keywords = [
    "TOML",
    "environment",
    "configuration",
]
license = "MIT/Apache-2.0"
name = "tomlenv"
readme = "README.md"
repository = "https://github.com/rustyhorde/tomlenv"
version = "0.3.2"

[dependencies]
clap = "2"
failure = "0"
serde = "1"
serde_derive = "1"
toml = "0"

[dev-dependencies]
getset = "0"
dirs = "1"
