[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
description = "Manage your environment configuration with TOML"
documentation = "https://docs.rs/tomlenv"
edition = "2018"
homepage = "https://github.com/rustyhorde/tomlenv"
keywords = [
    "TOML",
    "environment",
    "configuration",
]
license = "MIT/Apache-2.0"
name = "tomlenv"
readme = "README.md"
repository = "https://github.com/rustyhorde/tomlenv"
version = "0.4.2"

[dependencies]
clap = "2.34.0"
getset = "0.1.2"
serde = { version = "1.0.149", features = ["derive"] }
toml = "0.5.9"

[dev-dependencies]
dirs = "1.0.5"

[build-dependencies]
rustversion = "1.0.9"
